[gd_scene load_steps=44 format=3 uid="uid://djx10aob0jbg3"]

[ext_resource type="Texture2D" uid="uid://bbrnu23424ut2" path="res://art/Enemy/3/Walk.png" id="1_sgn1c"]
[ext_resource type="Script" path="res://scripts/enemio_3.gd" id="1_w3bdk"]
[ext_resource type="Texture2D" uid="uid://b7u5mncl80s1i" path="res://art/Enemy/3/Hit.png" id="2_rxcmt"]
[ext_resource type="Texture2D" uid="uid://m7ib0bg8260y" path="res://art/Player/LargeShadow.png" id="2_uqv0o"]
[ext_resource type="Shader" path="res://art/Elite.gdshader" id="2_w4fia"]
[ext_resource type="Texture2D" uid="uid://d12gw3qn44emf" path="res://art/Enemy/3/Death.png" id="3_1u4i7"]
[ext_resource type="PackedScene" uid="uid://8mk0il1s3w4j" path="res://scenes/hurt_box.tscn" id="4_l4t6o"]
[ext_resource type="PackedScene" uid="uid://dpg8igdyy7wcb" path="res://scenes/hitBox.tscn" id="5_j8ma1"]
[ext_resource type="AudioStream" uid="uid://c32x000ql6st6" path="res://art/Sounds/enemyDeath.wav" id="9_5ix1n"]
[ext_resource type="AudioStream" uid="uid://byxovgf53gtq" path="res://art/Sounds/enemyHurt.wav" id="10_61lo5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_actsg"]
shader = ExtResource("2_w4fia")

[sub_resource type="AtlasTexture" id="AtlasTexture_0744a"]
atlas = ExtResource("2_rxcmt")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f63xm"]
atlas = ExtResource("2_rxcmt")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2t2o"]
atlas = ExtResource("2_rxcmt")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnem8"]
atlas = ExtResource("2_rxcmt")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s66xv"]
atlas = ExtResource("2_rxcmt")
region = Rect2(448, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_llhjx"]
atlas = ExtResource("3_1u4i7")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_11qm4"]
atlas = ExtResource("3_1u4i7")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6epf"]
atlas = ExtResource("3_1u4i7")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uks5j"]
atlas = ExtResource("3_1u4i7")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1dvk"]
atlas = ExtResource("3_1u4i7")
region = Rect2(448, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k54x6"]
atlas = ExtResource("3_1u4i7")
region = Rect2(560, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0pdr"]
atlas = ExtResource("3_1u4i7")
region = Rect2(672, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ffwr"]
atlas = ExtResource("3_1u4i7")
region = Rect2(784, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cciw8"]
atlas = ExtResource("3_1u4i7")
region = Rect2(896, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcdeg"]
atlas = ExtResource("3_1u4i7")
region = Rect2(1008, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cbl7"]
atlas = ExtResource("3_1u4i7")
region = Rect2(1120, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh6wn"]
atlas = ExtResource("1_sgn1c")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t00iw"]
atlas = ExtResource("1_sgn1c")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7gkq"]
atlas = ExtResource("1_sgn1c")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntsew"]
atlas = ExtResource("1_sgn1c")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6smgs"]
atlas = ExtResource("1_sgn1c")
region = Rect2(448, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k20u2"]
atlas = ExtResource("1_sgn1c")
region = Rect2(560, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vum6"]
atlas = ExtResource("1_sgn1c")
region = Rect2(672, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1l6c"]
atlas = ExtResource("1_sgn1c")
region = Rect2(784, 0, 112, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kst3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0744a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f63xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2t2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnem8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s66xv")
}],
"loop": false,
"name": &"Damage",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llhjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11qm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6epf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uks5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1dvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k54x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0pdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ffwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cciw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcdeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cbl7")
}],
"loop": false,
"name": &"Death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh6wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t00iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7gkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntsew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6smgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k20u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vum6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1l6c")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i4373"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5s7s5"]
size = Vector2(28.75, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lanuw"]
size = Vector2(26.5, 33)

[sub_resource type="Animation" id="Animation_mm2xg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_682pn"]
resource_name = "elite"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_284pv"]
resource_name = "notElite"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lec87"]
_data = {
"RESET": SubResource("Animation_mm2xg"),
"elite": SubResource("Animation_682pn"),
"notElite": SubResource("Animation_284pv")
}

[node name="Sentinella" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_w3bdk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_actsg")
sprite_frames = SubResource("SpriteFrames_kst3d")
animation = &"Damage"
autoplay = "default"
frame = 4
frame_progress = 1.0

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
show_behind_parent = true
position = Vector2(-1, 15)
scale = Vector2(1.09375, 1)
texture = ExtResource("2_uqv0o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 4)
shape = SubResource("CircleShape2D_i4373")

[node name="HurtBox" parent="." instance=ExtResource("4_l4t6o")]
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-0.375, 1.5)
shape = SubResource("RectangleShape2D_5s7s5")

[node name="hitBox" parent="." instance=ExtResource("5_j8ma1")]
collision_layer = 2

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2(-0.25, 1.5)
shape = SubResource("RectangleShape2D_lanuw")
debug_color = Color(0.825244, 0.00160545, 0.955459, 0.42)

[node name="DamageNumberOrigin" type="Node2D" parent="."]
position = Vector2(0, -22)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lec87")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_5ix1n")

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_61lo5")
pitch_scale = 0.6
max_distance = 500.0

[node name="HideTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HideTimer" to="." method="_on_timer_timeout"]

[editable path="HurtBox"]
[editable path="hitBox"]
